# ds-petri

./: .gitignore  Example Prompts.md  README.md  config.json  pyproject.toml
src/ds_petri/: __init__.py  cli.py
src/ds_petri/utils/: config_manager.py  logging_config.py  results_presenter.py
src/petri/scorers/: prompts.py
