[project]
name = "petri"
version = "0.1.0"
description = "An auditing agent that enables automated monitoring and interaction with language models to detect potential alignment issues, reward hacking, and other concerning behaviors."
readme = "README.md"
authors = [
    { name = "kaifronsdal", email = "kaifronsdal@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.55.0",
    "fuzzysearch>=0.8.0",
    "google-genai>=1.33.0",
    "inspect-ai>=0.3.120",
    "openai>=1.91.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/petri", "src/ds_petri"]

[project.scripts]
ds-petri = "ds_petri.cli:main"

[project.entry-points.inspect_ai]
hooks = "petri.hooks.transcript_hook"
evals = "petri.tasks._registry"
